--- a/frontend/src/app/modules/layout/header/header.component.html
+++ b/frontend/src/app/modules/layout/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="navbar">
+<div class="navbar bg-light">
   <div>Task <b>Manager</b></div>
   <div *ngIf="isLoggedTest()" class="btn-group" dropdown>
     <a dropdownToggle class="dropdown-toggle a" href="javascript:void(0);" aria-controls="dropdown-alignment">
