--- a/frontend/src/app/modules/task/components/task-detail/task-detail.component.less
+++ b/frontend/src/app/modules/task/components/task-detail/task-detail.component.less
@@ -1,9 +1,22 @@
 hr {
     border: none;
-    background-color: #FFA500;
-    color: #FFA500;
+    background-color: black;
+    color: black;
     height: 1px; 
     margin: 0;
+}
+
+.row {    
+    margin-right: -15px;
+    margin-left: -15px;   
+}
+
+.container-fluid {
+    width: 100%;
+    padding-right: 70px;
+    padding-left: 70px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 .task-info-header{
@@ -45,7 +58,8 @@ hr {
 
 
 .media {
-    border-bottom:1px dashed black;
+    border: 1px solid black;
+    border-radius: 10px;
     margin-bottom:25px;
 }
 
