--- a/frontend/src/app/modules/user/components/users/users.component.html
+++ b/frontend/src/app/modules/user/components/users/users.component.html
@@ -6,7 +6,7 @@
         </div>                 			
     </div>
   </div>
-  <table class="table table-hover table-bordered ">
+  <table class="table table-hover table-borderless">
     <thead>
       <tr>
         <td>Id</td>
