--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -2,8 +2,7 @@
   <app-header></app-header>
 </header>
 
-<main style="min-height: 90vh;  border: 1px;
-border-style: solid;">
+<main style="min-height: 90vh;">
   <router-outlet></router-outlet>
 </main>
 
