--- a/frontend/src/app/modules/layout/footer/footer.component.html
+++ b/frontend/src/app/modules/layout/footer/footer.component.html
@@ -1,3 +1,3 @@
-<div class="footer-wrapper">
-    <small>&copy; Chernyak Private Ltd.</small>
+<div class="footer-wrapper  bg-light">
+    <small><b>&copy;Chernyak Private Ltd.</b></small>
 </div>
