--- a/frontend/src/app/modules/project/components/project-details/project-details.component.less
+++ b/frontend/src/app/modules/project/components/project-details/project-details.component.less
@@ -1,3 +1,16 @@
 .list{
     background-color: gray;
 }
+
+.row {    
+    margin-right: -15px;
+    margin-left: -15px;   
+}
+
+.container-fluid {
+    width: 100%;
+    padding-right: 70px;
+    padding-left: 70px;
+    margin-right: auto;
+    margin-left: auto;
+}
