--- a/frontend/src/app/modules/project/components/projects-table/projects-table.component.html
+++ b/frontend/src/app/modules/project/components/projects-table/projects-table.component.html
@@ -6,7 +6,7 @@
       </div>           
     </div>
   </div>
-  <table  class="table table-hover table-bordered">
+  <table  class="table table-hover table-borderless">
     <thead>
       <tr>
         <td>ID</td>
@@ -21,9 +21,10 @@
         <td class="align-middle">{{project.id}}</td>
         <td class="align-middle"><a [routerLink]="['/project-details', project.id]">{{project.projectCode}}</a></td>
         <td class="align-middle">{{project.name}}</td>
-        <td class="align-middle">{{project.manager}}</td>                  
+        <td class="align-middle">{{project.manager}}</td>  
+                         
         <td class="align-middle"> 
-          <button type="button" class="btn btn-success " (click)="_deleteProject(project.id)">Delete</button>              
+          <button type="button" class="btn btn-success btn-sm" (click)="_deleteProject(project.id)">Delete</button>              
         </td>
       </tr>
     </tbody>
