--- a/frontend/src/app/modules/project/components/projects-table/projects-table.component.less
+++ b/frontend/src/app/modules/project/components/projects-table/projects-table.component.less
@@ -1,31 +1,44 @@
-.table-wrapper{
-
-    background: #fff;    
-    margin: 10px 0;
-    border-radius: px;
-    
-    .table-title{
-        .btn{
-            margin-right: 10px;
-        }
-        margin: 10px;
+.table-wrapper {
+  background: #fff;
+  margin: 10px 0;
+  .table-title {
+    .btn {
+      margin-right: 10px;
     }
-
-    table{
-
-        font-size: 1rem;
-        td{
-            vertical-align: middle;
-            padding: .1rem;
-        }
-        td:first-child{
-            border-right-style: solid; /* Стиль линии */
-            border-right-width: 1px; 
-        }
-        td:last-child{
-            border-left-style: solid; /* Стиль линии */
-            border-left-width: 1px; 
-        }  
-              
+    margin: 10px;
+  }
+  table {
+    margin-top: 1rem;
+    font-size: 1rem;
+    border-collapse: separate;
+    border-spacing: 0 5px;
+    td {
+      padding: 0.3rem;
+      vertical-align: middle;
     }
+    td:first-child {
+      padding-left: 10px;
+      width: 60px;
+      border-left-style: solid;
+      border-top-left-radius: 10px;
+      border-bottom-left-radius: 10px;
+    }
+    td:last-child {
+      border-right-style: solid;
+      border-bottom-right-radius: 10px;
+      border-top-right-radius: 10px;
+    }
+    tbody {
+      tr {
+        overflow: hidden;
+        border-bottom: 10px solid #fff;
+        border-radius: 20px;
+        background-color: #f7f7f7;
+      }
+      tr:hover td {
+        background-color: #ebebeb;
+        cursor: pointer;
+      }
+    }
+  }
 }
