--- a/frontend/src/app/modules/task/components/tasks-table/tasks-table.component.less
+++ b/frontend/src/app/modules/task/components/tasks-table/tasks-table.component.less
@@ -1,6 +1,3 @@
-.btn{
-    margin: 10px;
-}
 .table-wrapper {
     background: #fff;
     margin: 10px 0;
@@ -21,7 +18,10 @@
       }
       td:first-child {
         padding-left: 10px;
-        width: 60px;
+        white-space: nowrap;
+        overflow: hidden; 
+        max-width: 40px;
+        text-overflow: ellipsis;
         border-left-style: solid;
         border-top-left-radius: 10px;
         border-bottom-left-radius: 10px;
@@ -44,4 +44,16 @@
         }
       }
     }
+  }
+  
+  .priority-high {
+    color: #FC581C;
+  }
+  
+  .priority-low {
+    color: #31CE11;
+  }
+  
+  .priority-medium {
+    color: #FFD23E;
   }
