--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,9 @@
-<header>
-  <app-header></app-header>
-</header>
+<ngx-alerts style="z-index: 100;
+position: absolute;
+right: 15px;
+bottom: 30px;"></ngx-alerts>
+<app-header></app-header>
+
 
 <main style="min-height: 90vh;">
   <router-outlet></router-outlet>
