--- a/frontend/src/app/modules/layout/header/header.component.less
+++ b/frontend/src/app/modules/layout/header/header.component.less
@@ -1,5 +1,8 @@
 .navbar{   
-    
-    color: black;    
+    background-color: #CCC7C7;
+    font-size: 1.2rem; 
+    a{
+        color: black;
+    }  
     
 }
