--- a/frontend/src/app/modules/layout/home/home.component.less
+++ b/frontend/src/app/modules/layout/home/home.component.less
@@ -14,3 +14,14 @@
     margin-right: auto;
     margin-left: auto;
 }
+
+.dueDate{
+    width: 50px;
+}
+
+.alert{
+    z-index: 100;
+    position: absolute;
+    right: 15px;
+    bottom: 30px;
+}
