--- a/frontend/src/app/modules/project/components/project-details/project-details.component.html
+++ b/frontend/src/app/modules/project/components/project-details/project-details.component.html
@@ -20,7 +20,7 @@
           <app-tasks-on-the-project-table [project]="project">            
           </app-tasks-on-the-project-table>
         </tab>
-        <tab heading="Users">
+        <tab heading="Team">
           <app-users-on-the-project-table [project]="project">
           </app-users-on-the-project-table>
         </tab>
