--- a/frontend/src/app/modules/task/components/task-detail/task-detail.component.html
+++ b/frontend/src/app/modules/task/components/task-detail/task-detail.component.html
@@ -9,8 +9,8 @@
           </div>
           <div class="col-md-6">
             <div class="btn-group" role="group" aria-label="First group">
-              <button type="button" class="btn btn-primary" (click)="_editTask(task)"><i class="icon-edit"></i></button>
-              <button type="button" class="btn btn-primary" (click)="_openFileModal()"><i class="icon-paper-clip"></i></button>
+              <button type="button" class="btn btn-primary" data-toggle="tooltip" data-placement="bottom" title="Edit task" (click)="_editTask(task)"><i class="icon-edit"></i></button>
+              <button type="button" class="btn btn-primary" data-toggle="tooltip" data-placement="bottom" title="Add attachments" (click)="_openFileModal()"><i class="icon-paper-clip"></i></button>
             </div>            
           </div>
         </div>
