--- a/frontend/src/app/modules/layout/admin/admin.component.html
+++ b/frontend/src/app/modules/layout/admin/admin.component.html
@@ -1,2 +1,7 @@
-<app-users></app-users>
-
+<div class="wrapper pt-3">
+  <div class="home container-fluid">
+    <div class="row">
+      <app-users></app-users>
+    </div>   
+  </div>
+</div>
