--- a/frontend/src/app/modules/layout/footer/footer.component.html
+++ b/frontend/src/app/modules/layout/footer/footer.component.html
@@ -1,3 +1,3 @@
-<div class="footer-wrapper  bg-light">
+<div class="footer-wrapper bg-primary">
     <small><b>&copy;Chernyak Private Ltd.</b></small>
 </div>
