--- a/frontend/src/app/modules/layout/footer/footer.component.less
+++ b/frontend/src/app/modules/layout/footer/footer.component.less
@@ -1,6 +1,6 @@
 .footer-wrapper{
-    background-color:#1975f7;
+    background-color: #CCC7C7;
     color: black;
-    padding: 0;
+    padding: 4px 16px;
     margin: 0;
 }
