--- a/frontend/src/app/modules/task/components/tasks-on-the-project-table/tasks-on-the-project-table.component.less
+++ b/frontend/src/app/modules/task/components/tasks-on-the-project-table/tasks-on-the-project-table.component.less
@@ -12,6 +12,9 @@
     margin: 10px;
   }
   table {
+    .dueDate{
+      width: 120px;
+    }
     margin-top: 1rem;
     font-size: 1rem;
     border-collapse: separate;
@@ -22,7 +25,7 @@
     }
     td:first-child {
       padding-left: 10px;
-      width: 60px;
+      width: 70px;
       border-left-style: solid;
       border-top-left-radius: 10px;
       border-bottom-left-radius: 10px;
