--- a/frontend/src/app/modules/task/components/tasks-table/tasks-table.component.html
+++ b/frontend/src/app/modules/task/components/tasks-table/tasks-table.component.html
@@ -1,16 +1,16 @@
 <div class="table-wrapper">
-  <table class="table table-responsive-sm table-borderless">
+  <table class="table table-striped table-sm table-responsive-sm table-borderless">
     <thead>
       <tr>
-        <td>Task</td>
-        <td>Title</td>
-        <td>Priority</td>
-        <td>Status</td>
-        <td>Due Date</td>
+        <td><a (click)="onSortClick('id')">Task <i class="icon-sort"></i></a></td>
+        <td><a (click)="onSortClick('title')">Title <i class="icon-sort"></i></a></td>
+        <td><a (click)="onSortClick('priority')">Priority <i class="icon-sort"></i></a></td>
+        <td><a (click)="onSortClick('taskStatus')">Satuts <i class="icon-sort"></i></a></td>
+        <td><a (click)="onSortClick('dueDate')">Due Date <i class="icon-sort"></i></a></td>
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let task of tasks" (click)="taskOpen(task.id)">
+      <tr *ngFor="let task of tasks" (click)="onTaskClick(task.id)">
         <td>{{task.ticketCode}}</td>
         <td>{{task.title}} </td>
         <td>
@@ -34,9 +34,13 @@
       </tr>
     </tbody>
   </table>
-  <div class="col-xs-12 col-12">
-    <pagination class="pagination-sm" [itemsPerPage]="pageSize" [totalItems]="totalItems" [(ngModel)]="currentPage"
-      (pageChanged)="pageChanged($event)" [maxSize]="5">
-    </pagination>
+  <div class="row">
+      <div class="col-xs-12 col-12">
+          <pagination class="pagination-sm" [itemsPerPage]="pageSize" [totalItems]="totalItems" [(ngModel)]="currentPage"
+            (pageChanged)="onPageChanged($event)" [maxSize]="5">
+          </pagination>
+        </div>
+
   </div>
+ 
 </div>
