--- a/frontend/src/app/modules/comment/comments-list/comments-list.component.html
+++ b/frontend/src/app/modules/comment/comments-list/comments-list.component.html
@@ -1,14 +1,18 @@
-<div class="div">
+<div class="comments">
   <ul class="media-list">
     <li class="media" *ngFor="let comment of comments">
       <div class="media-body">
-        <span class="text-muted pull-right">
-          <small class="text-muted">{{comment.created | date}}</small>
-        </span>
-        <strong class="text-success">@{{comment.author}}</strong>
-        <p>
-          {{comment.description}}
-        </p>
+        <div class="info">
+          <span class="text-muted pull-right">
+            <small class="text-muted">{{comment.created | date}}</small>
+          </span>
+          <strong class="text-primary">{{comment.author}}</strong> commented:
+        </div>
+        <div class="description">
+          <p>
+            {{comment.description}}
+          </p>
+        </div>
       </div>
     </li>
   </ul>
