--- a/frontend/src/app/modules/task/components/task-detail/task-detail.component.less
+++ b/frontend/src/app/modules/task/components/task-detail/task-detail.component.less
@@ -38,18 +38,7 @@ hr {
 
 
 
-.pb-cmnt-container {
-    font-family: Lato;
-    margin-top: 100px;
-}
 
-.pb-cmnt-textarea {
-    resize: none;
-    padding: 20px;
-    height: 130px;
-    width: 100%;
-    border: 1px solid #F2F2F2;
-}
 
 .panel-body {
     max-height:650px;
@@ -71,8 +60,20 @@ hr {
 .conetnt{
     min-height: 100%;
     height: 100%;
+    border: solid 2px red;
+}
+.comment {
+    margin-top: 1rem;
+    
 }
 
 .task-header{
     margin: 1rem 0rem;
+}
+.pb-cmnt-textarea {
+    resize: none;
+    padding: 20px;
+    height: 100px;
+    width: 100%;
+    border: 1px solid #F2F2F2;
 }
