--- a/frontend/src/app/modules/project/components/new-project-modal/new-project-modal.component.html
+++ b/frontend/src/app/modules/project/components/new-project-modal/new-project-modal.component.html
@@ -1,28 +1,28 @@
 <div class="modal-header">
-  <h4 class="modal-title pull-left">Create new User</h4>
+  <h4 class="modal-title pull-left">{{editMode ? "Edit": "Create"}} Project</h4>
   <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
     <span aria-hidden="true">&times;</span>
   </button>
 </div>
 <div class="modal-body">
-  <form [formGroup]="newProjectForm">
+  <form [formGroup]="formGroup">
     <div class="form-group">
       <label>Project Code</label>
-      <input class="form-control" formControlName="projectCode" [(ngModel)]="project.projectCode" [ngClass]="{'is-invalid': submmited && f.projectCode.errors }"/>
+      <input class="form-control" formControlName="projectCode" [ngClass]="{'is-invalid': submmited && f.projectCode.errors }"/>
       <div *ngIf="submmited && f.projectCode.errors" class="invalid-feedback">
         <div *ngIf="f.projectCode.errors.required">>>required</div>
       </div>
     </div>   
     <div class="form-group">
       <label>Project Name</label>
-      <input class="form-control" formControlName="name" [(ngModel)]="project.name" [ngClass]="{'is-invalid': submmited && f.name.errors }"/>
+      <input class="form-control" formControlName="name" [ngClass]="{'is-invalid': submmited && f.name.errors }"/>
       <div *ngIf="submmited && f.name.errors" class="invalid-feedback">
         <div *ngIf="f.name.errors.required">>>required</div>
       </div>
     </div>    
     <div class="form-group">
       <label>Summary</label>
-      <textarea class="form-control" formControlName="summary" [(ngModel)]="project.summary" [ngClass]="{'is-invalid': submmited && f.summary.errors }"></textarea>
+      <textarea class="form-control" formControlName="summary" [ngClass]="{'is-invalid': submmited && f.summary.errors }"></textarea>
       <div *ngIf="submmited && f.summary.errors" class="invalid-feedback">
           <div *ngIf="f.summary.errors.required">>>required</div>
       </div>
@@ -30,7 +30,7 @@
   </form>
 </div>
 <div class="modal-footer">
-  <div class="btn btn btn-primary" (click)="_onSubmit()">Save</div>
+  <div class="btn btn btn-primary" (click)="_onSubmit()">{{editMode ? "Edit": "Create"}}</div>
   <div class="btn btn-danger" (click)="modalRef.hide()">Close</div>
 </div>
 
