--- a/frontend/src/app/modules/project/components/project-details/project-details.component.html
+++ b/frontend/src/app/modules/project/components/project-details/project-details.component.html
@@ -3,8 +3,15 @@
     <div class="col-md-3">
       <div class="card">
         <div class="card-header">
-          <div class="modal-title pull-left">#{{project.projectCode}}</div>
-          <button type="button" class=" btn pull-right">Edit</button>
+          <div class="modal-title pull-left">#{{project.code}}</div>
+          <div class="buttons pull-right">
+            <button *ngIf="isMyProject" type="button" class=" btn " (click)=" _onEditProjectClick()">
+              <i class="icon-edit"></i>
+            </button>
+            <button *ngIf="isMyProject" type="button" class=" btn " (click)=" _onDeleteProjectClick()">
+              <i class="icon-trash"></i>
+            </button>
+          </div>
         </div>
         <div class="card-body">
           {{project.summary}}
@@ -17,7 +24,7 @@
     <div *ngIf="ready" class="col-md-9">
       <tabset>
         <tab heading="Tasks">
-          <app-tasks-on-the-project-table [project]="project">            
+          <app-tasks-on-the-project-table [project]="project">
           </app-tasks-on-the-project-table>
         </tab>
         <tab heading="Team">
