--- a/frontend/src/app/modules/task/components/task-detail/task-detail.component.html
+++ b/frontend/src/app/modules/task/components/task-detail/task-detail.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid" *ngIf="ready">
   <div class="row ">
-    <div class="col-md-12 content">
+    <div class="col-md-6 content">
       <div class="task-header">
         <div class="row">
           <div class="col-md-6">
@@ -9,109 +9,104 @@
           </div>
           <div class="col-md-6">
             <div class="btn-group" role="group" aria-label="First group">
-              <button type="button" class="btn btn-primary" data-toggle="tooltip" data-placement="bottom" title="Edit task" (click)="_editTask(task)"><i class="icon-edit"></i></button>
-              <button type="button" class="btn btn-primary" data-toggle="tooltip" data-placement="bottom" title="Add attachments" (click)="_openFileModal()"><i class="icon-paper-clip"></i></button>
-            </div>            
+              <button type="button" class="btn btn-primary" data-toggle="tooltip" data-placement="bottom" title="Edit task"
+                (click)="_editTask(task)"><i class="icon-edit"></i></button>
+              <button type="button" class="btn btn-primary" data-toggle="tooltip" data-placement="bottom" title="Add attachments"
+                (click)="_openFileModal()"><i class="icon-paper-clip"></i></button>
+            </div>
           </div>
         </div>
       </div>
-      <div>
-        <div class="row">
-          <div class="col-md-6">
-            <p class="task-info-header">People</p>
-            <hr/>
-            <div class="row mb-1">
-              <div class="col-md-4 label">Reoprter:</div>
-              <div class="col-md-8">{{task.reporter}}</div>
-            </div>
-            <div class="row mb-1">
-              <div class="col-md-4 label">Assignee:</div>
-              <div class="col-md-8">{{task.assignee}}</div>
-            </div>
-            <p class="task-info-header">Details</p>
-            <hr/>
-            <div class="row">
-              <div class="col-md-4 label">Priority:</div>
-              <div class="col-md-8">{{task.priority}}</div>
-            </div>
-            <div class="row">
-              <div class="col-md-4 label">Status:</div>
-              <div class="col-md-8">{{task.taskStatus}}</div>
-            </div>
+      <div class="row">
+        <div class="col-md-12">
+          <p class="task-info-header">People</p>
+          <hr />
+          <div class="row mb-1">
+            <div class="col-md-4 label">Reoprter:</div>
+            <div class="col-md-8">{{task.reporter}}</div>
           </div>
-          <div class="col-md-6">
-            <p class="task-info-header">Dates and Times</p>
-            <hr/>
-            <div class="row">
-              <div class="col-md-4 label">Create:</div>
-              <div class="col-md-8">{{task.created | date : "medium"}}</div>
-            </div>
-            <div class="row">
-              <div class="col-md-4 label">Update:</div>
-              <div class="col-md-8">{{task.updated | date : "medium"}}</div>
-            </div>
-            <div class="row">
-              <div class="col-md-4 label">Due date:</div>
-              <div class="col-md-8">{{task.dueDate | date : "medium"}}</div>
-            </div>
-            <div class="row">
-              <div class="col-md-4 label">Estimation:</div>
-              <div class="col-md-8">{{task.estimation | date : "medium"}}</div>
-            </div>
+          <div class="row mb-1">
+            <div class="col-md-4 label">Assignee:</div>
+            <div class="col-md-8">{{task.assignee}}</div>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <p class="task-info-header">Description</p>
-            <div class="description" style="min-height: 50px">
-              {{task.description}}
-            </div>
+          <p class="task-info-header">Details</p>
+          <hr />
+          <div class="row">
+            <div class="col-md-4 label">Priority:</div>
+            <div class="col-md-8">{{task.priority}}</div>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <p class="task-info-header">Attachments</p>            
-            <div class="attachments" style="min-height: 100px">
-              <app-file-list [taskId]="task.id" [projectId]="task.projectId">
-              </app-file-list>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6">
-            <p class="task-info-header">Comments</p>
-            <ul class="media-list">
-              <li class="media" *ngFor="let comment of comments">
-                <div class="media-body">
-                  <span class="text-muted pull-right">
-                    <small class="text-muted">{{comment.created | date}}</small>
-                  </span>
-                  <strong class="text-success">@{{comment.author}}</strong>
-                  <p>
-                    {{comment.description}}
-                  </p>
-                </div>
-              </li>
-            </ul>
-          </div>
-          <div class="col-md-6">
-            <textarea class="form-control" [(ngModel)]="text"></textarea>
-            <div class="btn btn btn-primary" (click)="_submitClick()">Submit</div>
+          <div class="row">
+            <div class="col-md-4 label">Status:</div>
+            <div class="col-md-8">{{task.taskStatus}}</div>
           </div>
         </div>
       </div>
-      <div [ngSwitch]="role" *ngIf="itMyTask">
-        <div class="card-footer justify-content-end" *ngSwitchCase="'DEVELOPER'">
-          <div [ngSwitch]="task.taskStatus">
-            <div *ngSwitchCase="'OPEN'" class="btn btn btn-primary" (click)="_inProgressClick()">In progress</div>
-            <div *ngSwitchCase="'IN_PROGRESS'" class="btn btn btn-primary" (click)="_readyForTestClick()">Ready for
-              test</div>
+      <div class="row">
+        <div class="col-md-12">
+          <p class="task-info-header">Dates and Times</p>
+          <hr />
+          <div class="row">
+            <div class="col-md-4 label">Create:</div>
+            <div class="col-md-8">{{task.created | date : "medium"}}</div>
+          </div>
+          <div class="row">
+            <div class="col-md-4 label">Update:</div>
+            <div class="col-md-8">{{task.updated | date : "medium"}}</div>
+          </div>
+          <div class="row">
+            <div class="col-md-4 label">Due date:</div>
+            <div class="col-md-8">{{task.dueDate | date : "medium"}}</div>
+          </div>
+          <div class="row">
+            <div class="col-md-4 label">Estimation:</div>
+            <div class="col-md-8">{{task.estimation | date : "medium"}}</div>
           </div>
         </div>
-        <div class="card-footer" *ngSwitchCase="'TESTER'">
-          <div class="btn btn btn-primary" (click)="_closedClick()">CLOSED</div>
-          <div class="btn btn btn-primary" (click)="_reopenClick()">REOPEN</div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <p class="task-info-header">Description</p>
+          <div class="description" style="min-height: 50px">
+            {{task.description}}
+          </div>
         </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <p class="task-info-header">Attachments</p>
+          <div class="attachments" style="min-height: 100px">
+            <app-file-list [taskId]="task.id" [projectId]="task.projectId">
+            </app-file-list>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6 comment">
+      <p class="task-info-header">Comments</p>
+      <div class="row">
+        <div class="col-md-12">
+          <app-comments-list [taskId]="task.id">
+          </app-comments-list>
+          <div class="panel-body">
+            <textarea placeholder="Write your comment here!" class="pb-cmnt-textarea form-control" [(ngModel)]="text"></textarea>
+            <button class="btn btn-primary pull-right" type="button" (click)="_submitClick()">Share</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div [ngSwitch]="role" *ngIf="itMyTask">
+      <div class="card-footer justify-content-end" *ngSwitchCase="'DEVELOPER'">
+        <div [ngSwitch]="task.taskStatus">
+          <div *ngSwitchCase="'OPEN'" class="btn btn btn-primary" (click)="_inProgressClick()">In progress</div>
+          <div *ngSwitchCase="'IN_PROGRESS'" class="btn btn btn-primary" (click)="_readyForTestClick()">Ready for
+            test</div>
+        </div>
+      </div>
+      <div class="card-footer" *ngSwitchCase="'TESTER'">
+        <div class="btn btn btn-primary" (click)="_closedClick()">CLOSED</div>
+        <div class="btn btn btn-primary" (click)="_reopenClick()">REOPEN</div>
       </div>
     </div>
   </div>
