--- a/frontend/src/app/modules/comment/comments-list/comments-list.component.less
+++ b/frontend/src/app/modules/comment/comments-list/comments-list.component.less
@@ -4,6 +4,8 @@
     color: rgba(52,52,52,.4);
     border: solid 2px rgba(52,52,52,.1);
     padding: 10px;
+    overflow-y: scroll;
+    height: 450px;
 
     .media {
         border: solid 1px rgba(52,52,52,.1);
