--- a/frontend/src/app/modules/file/component/file-list/file-list.component.html
+++ b/frontend/src/app/modules/file/component/file-list/file-list.component.html
@@ -1,7 +1,10 @@
 <div class="box">
-    <div *ngFor="let file of files">
+    <div class="file-item" *ngFor="let file of files">
         <div class="div">
           <a href="javascript:void(0);" (click)="_onClick(file)"><i class="icon-file icon-3x"></i></a>         
+        </div>    
+        <div class="file-name">
+                {{file}}     
         </div>     
     </div>
 
