--- a/frontend/src/app/modules/project/components/project-details/project-details.component.less
+++ b/frontend/src/app/modules/project/components/project-details/project-details.component.less
@@ -13,5 +13,12 @@
             padding: 0.375rem 0.75rem;        
         }
     }
+    
+    .card-footer {
+        padding: 0.2rem 1.25rem;
+        button {
+            margin-right: 20px;
+        }
+    }
 }
 
