--- a/frontend/src/app/modules/project/components/projects-table/projects-table.component.less
+++ b/frontend/src/app/modules/project/components/projects-table/projects-table.component.less
@@ -12,6 +12,14 @@
     font-size: 1rem;
     border-collapse: separate;
     border-spacing: 0 5px;
+    thead{
+      td{
+        cursor: pointer;
+        font-size: 0.7rem;
+        font-weight: bold;
+        text-transform: uppercase;        
+      }
+    }
     td {
       padding: 0.3rem;
       vertical-align: middle;
@@ -40,5 +48,8 @@
         cursor: pointer;
       }
     }
+  }
+  .pagination{
+    width: 50%;
   }
 }
