--- a/frontend/src/app/modules/task/components/task-detail/task-detail.component.less
+++ b/frontend/src/app/modules/task/components/task-detail/task-detail.component.less
@@ -71,9 +71,15 @@ hr {
     margin: 1rem 0rem;
 }
 .pb-cmnt-textarea {
+    border-radius: 10px;
     resize: none;
     padding: 20px;
-    height: 100px;
+    height: 80px;
     width: 100%;
-    border: 1px solid #F2F2F2;
+    margin: 10px 0px;
+    
+}
+
+.info-row {
+    margin-top: 15px;
 }
