--- a/frontend/src/app/modules/file/component/file-list/file-list.component.less
+++ b/frontend/src/app/modules/file/component/file-list/file-list.component.less
@@ -1,10 +1,23 @@
-.box div{
-    width: 100px;
-    height: 100px;
-    display: inline-block;
-    margin-right: 10px;
-    background-color: gainsboro;
-    text-align: center;
-    vertical-align: baseline;  
-
+.box {
+    .file-item{
+        width: 110px;
+        height: 100px;
+        display: inline-block;
+        margin-right: 10px;
+        background-color: gainsboro;
+        text-align: center;
+        vertical-align: baseline;  
+        border-radius: 5px;
+        margin-bottom: 10px;
+    }
+    .file-name{
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
+        font-size: 0.7rem;
+        padding-top: 25px;
+    }
+    a {
+        color: black;        
+    }
 }
