--- a/frontend/src/app/modules/project/components/projects-table/projects-table.component.html
+++ b/frontend/src/app/modules/project/components/projects-table/projects-table.component.html
@@ -9,11 +9,10 @@
   <table  class="table table-hover table-borderless">
     <thead>
       <tr>
-        <td>ID</td>
-        <td>Project Code</td>        
-        <td>Name</td>
-        <td>Manager</td>       
-        <td>Action</td>
+        <td><a (click)="onSortClick('id')">ID <i class="icon-sort"></i></a></td>
+        <td><a (click)="onSortClick('code')">Project Code <i class="icon-sort"></i></a></td>        
+        <td><a (click)="onSortClick('name')">Name <i class="icon-sort"></i></a></td>
+        <td><a (click)="onSortClick('manager')">Manager <i class="icon-sort"></i></a></td>
       </tr>     
     </thead>
     <tbody>
@@ -21,22 +20,20 @@
         <td class="align-middle">{{project.id}}</td>
         <td class="align-middle"><a [routerLink]="['/project-details', project.id]">{{project.code}}</a></td>
         <td class="align-middle">{{project.name}}</td>
-        <td class="align-middle">{{project.manager}}</td>                           
-        <td class="align-middle"> 
-          <button type="button" class="btn btn-success btn-sm" (click)="_deleteProject(project.id)">Delete</button>              
-        </td>
+        <td class="align-middle">{{project.manager}}</td>    
       </tr>
     </tbody>
   </table>
   <div class="row">
-    <div class="col-xs-12 col-12">
+    <div class="col-md-12">
       <pagination
+       class="pagination-sm"
        [itemsPerPage]="pageSize"
        [totalItems]="totalItems"
        [(ngModel)]="currentPage"
        (pageChanged)="pageChanged($event)"
-       [maxSize]="5">
-      </pagination>
+       [maxSize]="5">        
+      </pagination>           
     </div>
   </div>
 </div>
