--- a/frontend/src/app/modules/task/components/tasks-on-the-project-table/tasks-on-the-project-table.component.less
+++ b/frontend/src/app/modules/task/components/tasks-on-the-project-table/tasks-on-the-project-table.component.less
@@ -35,6 +35,14 @@
       border-bottom-right-radius: 10px;
       border-top-right-radius: 10px;
     }
+    thead{
+      td{
+        cursor: pointer;
+        font-size: 0.7rem;
+        font-weight: bold;
+        text-transform: uppercase;        
+      }
+    }
     tbody {
       tr {
         overflow: hidden;
