--- a/frontend/src/app/modules/task/components/tasks-table/tasks-table.component.html
+++ b/frontend/src/app/modules/task/components/tasks-table/tasks-table.component.html
@@ -1,4 +1,4 @@
-<div class="table-wrapper">
+<div *ngIf="checkTasks" class="table-wrapper">
   <table class="table table-striped table-sm table-responsive-sm table-borderless">
     <thead>
       <tr>
@@ -14,33 +14,25 @@
         <td>{{task.ticketCode}}</td>
         <td>{{task.title}} </td>
         <td>
-          <span class="badge ">
-            <i [ngClass]="{        
-                    'text-danger icon-long-arrow-up' : task.priority === 'CRITICAL',
-                    'text-warning icon-long-arrow-up' : task.priority === 'NORMAL'
-                  }"></i>
-            {{task.priority}}
-          </span>
+          <app-task-priority-view [priority]="task.priority">
+          </app-task-priority-view>
         </td>
         <td>
-          <span class="badge" [ngClass]="{
-            'badge-success' : task.taskStatus === 'OPEN',
-            'badge-primary' : task.taskStatus === 'IN_PROGRESS',
-            'badge-warning' : task.taskStatus === 'READY_FOR_TEST',
-            'badge-danger' : task.taskStatus === 'CLOSED'
-              }">{{task.taskStatus}}</span>
+          <app-task-status-view [status]="task.taskStatus">
+          </app-task-status-view>
         </td>
         <td>{{task.dueDate | date:'MMM d'}}</td>
       </tr>
     </tbody>
   </table>
   <div class="row">
-      <div class="col-xs-12 col-12">
-          <pagination class="pagination-sm" [itemsPerPage]="pageSize" [totalItems]="totalItems" [(ngModel)]="currentPage"
-            (pageChanged)="onPageChanged($event)" [maxSize]="5">
-          </pagination>
-        </div>
-
+    <div class="col-xs-12 col-12">
+      <pagination class="pagination-sm" [itemsPerPage]="pageSize" [totalItems]="totalItems" [(ngModel)]="currentPage"
+        (pageChanged)="onPageChanged($event)" [maxSize]="5">
+      </pagination>
+    </div>
   </div>
- 
+</div>
+<div *ngIf="!checkTasks">
+  There are no available tasks
 </div>
