--- a/frontend/src/app/modules/task/components/tasks-table/tasks-table.component.less
+++ b/frontend/src/app/modules/task/components/tasks-table/tasks-table.component.less
@@ -7,6 +7,9 @@
       }
       margin: 10px;
     }
+    select {
+      width: 200px;
+    }
     table {
       margin-top: 1rem;
       font-size: 1rem;
@@ -54,14 +57,3 @@
     }
   }
   
-  .priority-high {
-    color: #FC581C;
-  }
-  
-  .priority-low {
-    color: #31CE11;
-  }
-  
-  .priority-medium {
-    color: #FFD23E;
-  }
