--- a/frontend/src/app/modules/layout/admin/admin.component.html
+++ b/frontend/src/app/modules/layout/admin/admin.component.html
@@ -1,7 +1,9 @@
 <div class="wrapper pt-3">
   <div class="home container-fluid">
     <div class="row">
-      <app-users></app-users>
+      <div class="col-md-12">
+        <app-users></app-users>        
+      </div>      
     </div>   
   </div>
 </div>
