--- a/frontend/src/app/modules/user/components/users-on-the-project-table/users-on-the-project-table.component.html
+++ b/frontend/src/app/modules/user/components/users-on-the-project-table/users-on-the-project-table.component.html
@@ -28,11 +28,12 @@
 <div class="row">
   <div class="col-xs-12 col-12">
     <pagination
-     [itemsPerPage]="pageSize"
-     [totalItems]="totalItems"
-     [(ngModel)]="currentPage"
-     (pageChanged)="pageChanged($event)"
-     [maxSize]="5">
+      class="pagination-sm"
+      [itemsPerPage]="pageSize"
+      [totalItems]="totalItems"
+      [(ngModel)]="currentPage"
+      (pageChanged)="pageChanged($event)"
+      [maxSize]="5">
     </pagination>
   </div>
 </div>
